--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -540,6 +540,10 @@
     "translation": "CF_NAME get-health-check APP_NAME"
   },
   {
+    "id": "CF_NAME get-schema SERVICE_INSTANCE",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME help [COMMAND]",
     "translation": "CF_NAME help [COMMAND]"
   },
@@ -848,6 +852,10 @@
     "translation": "CF_NAME set-running-environment-variable-group '{\\\"name\\\":\\\"value\\\",\\\"name\\\":\\\"value\\\"}'"
   },
   {
+    "id": "CF_NAME set-schema SERVICE_INSTANCE SCHEME_FILENAME",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME set-space-isolation-segment SPACE_NAME SEGMENT_NAME",
     "translation": "CF_NAME set-space-isolation-segment SPACE_NAME SEGMENT_NAME"
   },
@@ -909,7 +917,7 @@
   },
   {
     "id": "CF_NAME ssh APP_NAME [-i app-instance-index] [-c command] [-L [bind_address:]port:host:hostport] [--skip-host-validation] [--skip-remote-execution] [--request-pseudo-tty] [--force-pseudo-tty] [--disable-pseudo-tty]",
-    "translation": "CF_NAME ssh APP_NAME [-i app-instance-index] [-c command] [-L [bind_address:]port:host:hostport] [--skip-host-validation] [--skip-remote-execution] [--request-pseudo-tty] [--force-pseudo-tty] [--disable-pseudo-tty]"
+    "translation": ""
   },
   {
     "id": "CF_NAME ssh-code",
@@ -1172,6 +1180,10 @@
     "translation": "Commands offered by installed plugins:"
   },
   {
+    "id": "ConnectTimeout=5",
+    "translation": ""
+  },
+  {
     "id": "Could not find service",
     "translation": "Could not find service"
   },
@@ -1248,12 +1260,24 @@
     "translation": "Error deleting user {{.Username}} \nMultiple users with that username found. Please use 'cf curl' to delete the user by guid instead."
   },
   {
+    "id": "Error getting ssh details: ",
+    "translation": ""
+  },
+  {
     "id": "Error parsing response",
     "translation": "Error parsing response"
   },
   {
     "id": "Error read/writing config: ",
     "translation": "Error read/writing config: "
+  },
+  {
+    "id": "Error reading schema file: ",
+    "translation": ""
+  },
+  {
+    "id": "Error reading schema: ",
+    "translation": ""
   },
   {
     "id": "Error refreshing config: ",
@@ -1264,7 +1288,15 @@
     "translation": "Error removing plugin binary: "
   },
   {
+    "id": "Error running ssh command: ",
+    "translation": ""
+  },
+  {
     "id": "Error running task: {{.CloudControllerMessage}}",
+    "translation": ""
+  },
+  {
+    "id": "Error setting schema: ",
     "translation": ""
   },
   {
@@ -1276,12 +1308,24 @@
     "translation": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks."
   },
   {
+    "id": "Error tmp dir: ",
+    "translation": ""
+  },
+  {
+    "id": "Error writing ssh keys to tmp file: ",
+    "translation": ""
+  },
+  {
     "id": "Failed to create a local temporary zip file for the buildpack",
     "translation": "Failed to create a local temporary zip file for the buildpack"
   },
   {
     "id": "Features",
     "translation": "Features"
+  },
+  {
+    "id": "Get a service schema. Currently only supported in the webproxy.",
+    "translation": ""
   },
   {
     "id": "Getting isolation segments as {{.CurrentUser}}...",
@@ -1317,6 +1361,10 @@
   },
   {
     "id": "In order to move running applications to this isolation segment, they must be restarted.",
+    "translation": ""
+  },
+  {
+    "id": "Incorrect Usage.",
     "translation": ""
   },
   {
@@ -1484,6 +1532,10 @@
     "translation": ""
   },
   {
+    "id": "PROXY SERVICE",
+    "translation": "PROXY SERVICE"
+  },
+  {
     "id": "Parameters as JSON",
     "translation": "Parameters as JSON"
   },
@@ -1542,6 +1594,10 @@
   {
     "id": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)",
     "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
+  },
+  {
+    "id": "Referer",
+    "translation": ""
   },
   {
     "id": "Removing entitlement to isolation segment {{.SegmentName}} from org {{.OrgName}} as {{.CurrentUser}}...",
@@ -1608,6 +1664,10 @@
     "translation": "SERVICES:"
   },
   {
+    "id": "SSH Finished\n",
+    "translation": ""
+  },
+  {
     "id": "SSL Certificate Error {{.Message}}\nTIP: Use 'cf api --skip-ssl-validation' to continue with an insecure API endpoint",
     "translation": ""
   },
@@ -1617,6 +1677,10 @@
   },
   {
     "id": "SUCCEEDED",
+    "translation": ""
+  },
+  {
+    "id": "Schema file invalid: ",
     "translation": ""
   },
   {
@@ -1656,6 +1720,10 @@
     "translation": "Services:"
   },
   {
+    "id": "Set schema for a service. Currently only supported in the webproxy.",
+    "translation": ""
+  },
+  {
     "id": "Set to 'port' or 'none'",
     "translation": ""
   },
@@ -1681,6 +1749,10 @@
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
+    "translation": ""
+  },
+  {
+    "id": "StrictHostKeychecking=no",
     "translation": ""
   },
   {
@@ -2048,6 +2120,10 @@
     "translation": "Usage:"
   },
   {
+    "id": "UserKnownHostsFile=/dev/null",
+    "translation": ""
+  },
+  {
     "id": "VERSION:",
     "translation": "VERSION:"
   },
@@ -2148,7 +2224,19 @@
     "translation": ""
   },
   {
+    "id": "get-schema",
+    "translation": ""
+  },
+  {
+    "id": "gocf",
+    "translation": ""
+  },
+  {
     "id": "health check type:",
+    "translation": ""
+  },
+  {
+    "id": "identity",
     "translation": ""
   },
   {
@@ -2217,6 +2305,10 @@
   },
   {
     "id": "services:",
+    "translation": ""
+  },
+  {
+    "id": "set-schema",
     "translation": ""
   },
   {
