--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -1020,6 +1020,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME get-schema SERVICE_INSTANCE",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME help [COMMAND]",
     "translation": ""
   },
@@ -1353,6 +1357,10 @@
   },
   {
     "id": "CF_NAME set-running-environment-variable-group '{\\\"name\\\":\\\"value\\\",\\\"name\\\":\\\"value\\\"}'",
+    "translation": ""
+  },
+  {
+    "id": "CF_NAME set-schema SERVICE_INSTANCE SCHEME_FILENAME",
     "translation": ""
   },
   {
@@ -1794,6 +1802,10 @@
   {
     "id": "Computing sha1 for installed plugins, this may take a while ...",
     "translation": "インストール済みプラグインの sha1 を計算しています、しばらく時間がかかることがあります ..."
+  },
+  {
+    "id": "ConnectTimeout=5",
+    "translation": ""
   },
   {
     "id": "Connected, dumping recent logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...\n",
@@ -2612,6 +2624,10 @@
     "translation": "リポジトリーからプラグイン・メタデータを取得しようとしたときエラーが発生しました: "
   },
   {
+    "id": "Error getting ssh details: ",
+    "translation": ""
+  },
+  {
     "id": "Error getting the redirected location: {{.Error}}",
     "translation": "リダイレクトされたロケーションを取得中にエラーが発生しました: {{.Error}}"
   },
@@ -2680,6 +2696,14 @@
     "translation": "サーバーから応答を読み取っているときエラーが発生しました: "
   },
   {
+    "id": "Error reading schema file: ",
+    "translation": ""
+  },
+  {
+    "id": "Error reading schema: ",
+    "translation": ""
+  },
+  {
     "id": "Error refreshing config: ",
     "translation": ""
   },
@@ -2720,6 +2744,10 @@
     "translation": "スタックの取得時にエラーが発生しました: {{.Error}}"
   },
   {
+    "id": "Error running ssh command: ",
+    "translation": ""
+  },
+  {
     "id": "Error running task: {{.CloudControllerMessage}}",
     "translation": ""
   },
@@ -2728,11 +2756,19 @@
     "translation": "マニフェストの保存中にエラーが発生しました: {{.Error}}"
   },
   {
+    "id": "Error setting schema: ",
+    "translation": ""
+  },
+  {
     "id": "Error staging application: {{.Message}}",
     "translation": ""
   },
   {
     "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
+    "translation": ""
+  },
+  {
+    "id": "Error tmp dir: ",
     "translation": ""
   },
   {
@@ -2750,6 +2786,10 @@
   {
     "id": "Error uploading buildpack {{.Name}}\n{{.Error}}",
     "translation": "ビルドパック {{.Name}} のアップロード時にエラーが発生しました\n{{.Error}}"
+  },
+  {
+    "id": "Error writing ssh keys to tmp file: ",
+    "translation": ""
   },
   {
     "id": "Error writing to tmp file: {{.Err}}",
@@ -2954,6 +2994,10 @@
   {
     "id": "Get a one time password for ssh clients",
     "translation": "SSH クライアント用のワンタイム・パスワードを取得します"
+  },
+  {
+    "id": "Get a service schema. Currently only supported in the webproxy.",
+    "translation": ""
   },
   {
     "id": "Get the health_check_type value of an app",
@@ -3242,6 +3286,10 @@
   {
     "id": "Incorrect Usage",
     "translation": "誤った使用法"
+  },
+  {
+    "id": "Incorrect Usage.",
+    "translation": ""
   },
   {
     "id": "Incorrect Usage. An argument is missing or not correctly enclosed.\n\n",
@@ -4188,6 +4236,10 @@
     "translation": ""
   },
   {
+    "id": "PROXY SERVICE",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "有料サービス・プラン"
   },
@@ -4510,6 +4562,10 @@
   {
     "id": "Recursively remove a service instance and child objects from Cloud Foundry database without making requests to a service broker",
     "translation": "サービス・ブローカーに要請することなく Cloud Foundry データベースからサービス・インスタンスと子オブジェクトを再帰的に削除します"
+  },
+  {
+    "id": "Referer",
+    "translation": ""
   },
   {
     "id": "Remove a plugin repository",
@@ -4868,6 +4924,10 @@
     "translation": "スペース:"
   },
   {
+    "id": "SSH Finished\n",
+    "translation": ""
+  },
+  {
     "id": "SSH to an application container instance",
     "translation": "SSH 経由でアプリケーション・コンテナー・インスタンスに接続します"
   },
@@ -4886,6 +4946,10 @@
   {
     "id": "Scaling app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
     "translation": "{{.CurrentUser}} として組織 {{.OrgName}} / スペース {{.SpaceName}} 内のアプリ {{.AppName}} をスケーリングしています..."
+  },
+  {
+    "id": "Schema file invalid: ",
+    "translation": ""
   },
   {
     "id": "Security Groups:",
@@ -5018,6 +5082,10 @@
   {
     "id": "Set or view the targeted org or space",
     "translation": "ターゲットにされた組織またはスペースを設定または表示します"
+  },
+  {
+    "id": "Set schema for a service. Currently only supported in the webproxy.",
+    "translation": ""
   },
   {
     "id": "Set to 'port' or 'none'",
@@ -5230,6 +5298,10 @@
   {
     "id": "Stopping app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
     "translation": "{{.CurrentUser}} として組織 {{.OrgName}} / スペース {{.SpaceName}} 内のアプリ {{.AppName}} を停止しています..."
+  },
+  {
+    "id": "StrictHostKeychecking=no",
+    "translation": ""
   },
   {
     "id": "System-Provided:",
@@ -6040,6 +6112,10 @@
     "translation": "ユーザー:"
   },
   {
+    "id": "UserKnownHostsFile=/dev/null",
+    "translation": ""
+  },
+  {
     "id": "Username",
     "translation": "ユーザー名"
   },
@@ -6380,6 +6456,14 @@
     "translation": "無料または有料"
   },
   {
+    "id": "get-schema",
+    "translation": ""
+  },
+  {
+    "id": "gocf",
+    "translation": ""
+  },
+  {
     "id": "health check type:",
     "translation": ""
   },
@@ -6398,6 +6482,10 @@
   {
     "id": "host",
     "translation": "ホスト"
+  },
+  {
+    "id": "identity",
+    "translation": ""
   },
   {
     "id": "instance memory",
@@ -6665,6 +6753,10 @@
   },
   {
     "id": "services:",
+    "translation": ""
+  },
+  {
+    "id": "set-schema",
     "translation": ""
   },
   {
